--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.5.0
 Django==4.0.3
 django-ckeditor==6.2.0
 django-js-asset==1.2.2
+gunicorn==20.1.0
 Pillow==9.0.1
 psycopg2==2.9.3
 pytz==2021.1
 sqlparse==0.4.1
 tzdata==2021.5
+whitenoise==6.0.0
